feat: add html tag parser using bottom-up, shift-reduce parsing method

--- a/sample.html
+++ b/sample.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
+
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title></title>
   </head>
   <body>
-
+    <div id="1" class="layer-1">
+      <div id="1-1" class="layer-2"></div>
+      <div id="1-2" class="layer-2"></div>
+    </div>
+    <span id="2" class="layer-1">
+      <div id="2-1" class="layer-2">
+        <div id="2-1-1" class="layer-3">
+          <div id="2-1-1-1" class="layer-4"></div>
+        </div>
+      </div>
+    </span>
+    <div id="3" class="layer-1"></div>
   </body>
 </html>
