--- a/sample.html
+++ b/sample.html
@@ -5,17 +5,17 @@
     <title></title>
   </head>
   <body>
-    <div id="1" class="layer-1">
-      <div id="1-1" class="layer-2"></div>
-      <div id="1-2" class="layer-2"></div>
+    <div id="d1" class="layer-1">
+      <div id="d1-1" class="layer-2"></div>
+      <div id="d1-2" class="layer-2"></div>
     </div>
-    <span id="2" class="layer-1">
-      <div id="2-1" class="layer-2">
-        <div id="2-1-1" class="layer-3">
-          <div id="2-1-1-1" class="layer-4"></div>
+    <span id="s2" class="layer-1">
+      <div id="d2-1" class="layer-2">
+        <div id="d2-1-1" class="layer-3">
+          <div id="d2-1-1-1" class="layer-4"></div>
         </div>
       </div>
     </span>
-    <div id="3" class="layer-1"></div>
+    <div id="d3" class="layer-1"></div>
   </body>
 </html>
