--- a/sample.html
+++ b/sample.html
@@ -6,13 +6,13 @@
   </head>
   <body>
     <div id="d1" class="layer-1">
-      <div id="d1-1" class="layer-2"></div>
-      <div id="d1-2" class="layer-2"></div>
+      <div id="d1-1" class="layer-2"><h1></h1></div>
+      <div id="d1-2" class="layer-2"><h2></h2></div>
     </div>
     <span id="s2" class="layer-1">
       <div id="d2-1" class="layer-2">
         <div id="d2-1-1" class="layer-3">
-          <div id="d2-1-1-1" class="layer-4"></div>
+          <div id="d2-1-1-1" class="layer-4"><h3></h3></div>
         </div>
       </div>
     </span>
