feat: add styledTree generator

--- a/sample.html
+++ b/sample.html
@@ -12,7 +12,7 @@
     <span id="s2" class="layer-1">
       <div id="d2-1" class="layer-2">
         <div id="d2-1-1" class="layer-3">
-          <div id="d2-1-1-1" class="layer-4"><h3></h3></div>
+          <div id="d2" class="layer-4"><h3></h3></div>
         </div>
       </div>
     </span>
